add put_user_preference endpoint
